2007-08-13  Michal Ludvig  <michal@logix.cz>

	* README: Updated Amazon S3 pricing overview

2007-08-13  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Config.py, S3/S3.py: HTTPS support

2007-07-20  Michal Ludvig  <michal@logix.cz>

	* setup.py: Check correct Python version and ElementTree availability.

2007-07-05  Michal Ludvig  <michal@logix.cz>

	* s3cmd: --configure support for Proxy
	* S3/S3.py: HTTP proxy support from
	  John D. Rowell <jdrowell@exerciseyourbrain.com>

2007-06-19  Michal Ludvig  <michal@logix.cz>

	* setup.py: Check for S3CMD_PACKAGING and don't install
	  manpages and docs if defined.
	* INSTALL: Document the above change.
	* MANIFEST.in: Include uncompressed manpage

2007-06-17  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Added encryption key support to --configure
	* S3/PkgInfo.py: Bump up version to 0.9.4-pre
	* setup.py: Cleaned up some rpm-specific stuff that 
	  caused problems to Debian packager Mikhail Gusarov
	* setup.cfg: Removed [bdist_rpm] section
	* MANIFEST.in: Include S3/*.py

2007-06-16  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Syntax fixes from Mikhail Gusarov <dottedmag@dottedmag.net>

2007-05-27  Michal Ludvig  <michal@logix.cz>

	* Support for on-the-fly GPG encryption.

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Add info about "s3cmd du" command.

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.3
	  ----------------------

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Patch from Basil Shubin <basil.shubin@gmail.com>
	  adding support for "s3cmd du" command.
	* s3cmd: Modified output format of "s3cmd du" to conform
	  with unix "du".
	* setup.cfg: Require Python 2.5 in RPM. Otherwise it needs
	  to require additional python modules (e.g. ElementTree)
	  which may have different names in different distros. It's 
	  indeed still possible to manually install s3cmd with 
	  Python 2.4 and appropriate modules.

2007-04-09  Michal Ludvig  <michal@logix.cz>
